# duckdb-whisper

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
community-extensions/extensions/whisper/: description.yml
community-extensions/whisper/: description.yml
docs/: FUNCTIONS.md
patches/: ggml-metal-disable-rsets-assert.patch
src/: audio_recorder.cpp  audio_utils.cpp  model_manager.cpp  transcription_engine.cpp  whisper_config.cpp  whisper_context.cpp  whisper_extension.cpp
src/functions/: model_functions.cpp  record_functions.cpp  transcribe_scalar.cpp  transcribe_table.cpp  utility_functions.cpp
src/include/: audio_recorder.hpp  audio_utils.hpp  http_client.hpp  model_manager.hpp  transcription_engine.hpp  whisper_config.hpp  whisper_context.hpp  whisper_extension.hpp
src/voice_query/: ddl_extractor.cpp  http_client.cpp  voice_query_function.cpp  voice_to_sql_function.cpp
test/sql/: whisper.test  whisper_audio.test  whisper_models.test  whisper_transcribe.test  whisper_voice_query.test
